# neutone

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  README.md  bun.lockb  package.json
backend/: .gitignore  AudioGenBase.py  GenerateMusic.py  MusicGenServer.py  main.py  modal_config.py  pyproject.toml  requirements.txt
frontend/: .env.example  .gitignore  bun.lockb  cloudflare-env-vars.md  debug-env.js  next.config.js  open-next.config.ts  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
frontend/.open-next/.build/: open-next.config.edge.mjs  open-next.config.mjs
frontend/.open-next/.build/durable-objects/: bucket-cache-purge.js  queue.js
frontend/.open-next/assets/: BUILD_ID
frontend/.open-next/cache/a1R8rI2iaJmMiYYZaVAX_/: 500.cache  _not-found.cache
frontend/.open-next/cloudflare/: cache-assets-manifest.sql  images.js  init.js
frontend/.open-next/dynamodb-provider/: dynamodb-cache.json
frontend/.open-next/middleware/: handler.mjs
frontend/.open-next/server-functions/default/: handler.mjs.meta.json  index.mjs
frontend/prisma/: schema.prisma
frontend/public/: _redirects
frontend/src/: env.js
frontend/src/actions/: generate.ts  song.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/components/: client-providers.tsx  create.tsx  (+4 more)
frontend/src/inngest/: client.ts  functions.ts
frontend/src/lib/: auth-client.ts  auth-constants.ts  auth.ts  auth.ts.backup
frontend/src/stores/: use-player-store.tsx
frontend/src/styles/: globals.css
(+54 files in other folders)
