[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.34.0",
    "hangul-romanize>=0.1.0",
    "librosa>=0.11.0",
    "modal>=1.1.1",
    "num2words>=0.5.14",
    "py3langid>=0.3.0",
    "pydantic>=2.11.7",
    "pypinyin>=0.55.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.50.0",
]
